<resources>
    <string name="app_name">NihonNews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_image_article">Image article</string>
    <string name="title_botnav_news">News</string>
    <string name="title_botnav_search">Search</string>
    <string name="title_botnav_saved">Saved</string>
    <string name="title_botnav_about">About</string>
    <string name="content_item_article">Item Article</string>
    <string name="content_item_bookmark">Item Bookmark</string>
    <string name="hint_search">Search</string>
    <string name="my_name">Zaenal Arif</string>
    <string name="description">Mobile Application Developer</string>
    <string name="my_email">zaenalariftech@gmail.com</string>
    <string name="content_email">Email</string>
    <string name="content_phone_number">Phone Number</string>
    <string name="my_phone_number">+62 878-8447-1700 ( WA )</string>
    <string name="tv_name">Name</string>
    <string name="tv_email">Email</string>
    <string name="tv_phone_number">Phone Number</string>
    <string name="tv_address">Address</string>
    <string name="my_address">Jl. H. Maisin, Petukangan Utara,\nPesanggrahan, Ciledug, \nJakartaSelatan.</string>
    <string name="content_address">Address</string>
    <string name="content_name">Name</string>
</resources>