<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/breakingNewsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_news"
        android:title="@string/title_botnav_news" />

    <item
        android:id="@+id/searchNewsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_news_search"
        android:title="@string/title_botnav_search" />

    <item
        android:id="@+id/savedNewsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_saved"
        android:title="@string/title_botnav_saved" />

    <item
        android:id="@+id/aboutFragment"
        android:enabled="true"
        android:icon="@drawable/ic_about"
        android:title="@string/title_botnav_about" />
</menu>